ui/index.css
#space {
  width: calc(100% - 5 * 30px);
}

#input-box {
  margin: 10px 0;
  width: 100%;
  display: flex;
  justify-content: center;
}

#input {
  margin: 0;
  width: 90%;
  font-family: monospace;
  font-size: 1.2em;
}

.dollar-sign {
  display: flex;
  width: 5%;
  justify-content: center;
  align-items: center;
}

